--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -328,6 +328,20 @@
   mrclass: '20E15 (06A11 06C15 20C15 20D30)'
   volume: '157'
 
+- number: '16'
+  author: 'Aiyappan, S. and Sardar, Bidhan Chandra'
+  fjournal: 'Applicable Analysis. An International Journal'
+  url: 'https://doi.org/10.1080/00036811.2018.1471207'
+  pages: '2783-2801'
+  year: '2019'
+  title: 'Biharmonic equation in a highly oscillating domain and homogenization of an associated control problem'
+  doi: '10.1080/00036811.2018.1471207'
+  issn: '0003-6811'
+  journal: 'Appl. Anal.'
+  mrnumber: '4017702'
+  mrclass: '49J45 (35B27 35J40 49J20 49K20 80M35 80M40)'
+  volume: '98'
+
 - number: '1-2'
   author: 'Pusti, Sanjoy and Sarkar, Rudra P.'
   fjournal: 'Manuscripta Mathematica'
@@ -1447,20 +1461,6 @@
   mrclass: '76N15 (76L05)'
   volume: '79'
 
-- number: '1'
-  author: 'Sain, Debmalya'
-  fjournal: 'Annals of Functional Analysis'
-  url: 'https://doi.org/10.1215/20088752-2018-0014'
-  pages: '135-143'
-  year: '2019'
-  title: 'On extreme contractions and the norm attainment set of a bounded linear operator'
-  doi: '10.1215/20088752-2018-0014'
-  issn: '2008-8752'
-  journal: 'Ann. Funct. Anal.'
-  mrnumber: '3899962'
-  mrclass: '47H09 (46C15)'
-  volume: '10'
-
 - number: '2'
   author: 'Reddy, Nanda Kishore'
   fjournal: 'International Mathematics Research Notices. IMRN'
@@ -1631,6 +1631,32 @@
   mrnumber: '2573913'
   mrclass: '34K07 (34K40 34K45 35R12 65L60)'
   volume: '16'
+
+- number: '1-2'
+  author: 'Aiyappan, S. and Jose, Editha C. and Lomerio, Ivy Carol B. and Nandakumaran, A. K.'
+  fjournal: 'Asymptotic Analysis'
+  pages: '19-46'
+  year: '2019'
+  title: 'Control problem on a rough circular domain and homogenization'
+  issn: '0921-7134'
+  journal: 'Asymptot. Anal.'
+  mrnumber: '4021345'
+  mrclass: '49J45 (35B27 35Q93 49J20)'
+  volume: '115'
+
+- number: '1'
+  author: 'Sain, Debmalya'
+  fjournal: 'Annals of Functional Analysis'
+  url: 'https://doi.org/10.1215/20088752-2018-0014'
+  pages: '135-143'
+  year: '2019'
+  title: 'On extreme contractions and the norm attainment set of a bounded linear operator'
+  doi: '10.1215/20088752-2018-0014'
+  issn: '2008-8752'
+  journal: 'Ann. Funct. Anal.'
+  mrnumber: '3899962'
+  mrclass: '47H09 (46C15)'
+  volume: '10'
 
 - author: 'Narayanan, E. K. and Rawat, R. and Ray, S. K.'
   fjournal: 'The Journal of Analysis'
@@ -3308,6 +3334,20 @@
   mrclass: '47L05 (46B20 46C15)'
   volume: '13'
 
+- number: '11'
+  author: 'Gupta, Subhojoy'
+  fjournal: 'Transactions of the American Mathematical Society'
+  url: 'https://doi.org/10.1090/tran/7777'
+  pages: '7573-7596'
+  year: '2019'
+  title: 'Limits of harmonic maps and crowned hyperbolic surfaces'
+  doi: '10.1090/tran/7777'
+  issn: '0002-9947'
+  journal: 'Trans. Amer. Math. Soc.'
+  mrnumber: '4029674'
+  mrclass: '30F60 (57M50 58E20)'
+  volume: '372'
+
 - number: '4'
   author: 'Gadgil, Siddhartha'
   fjournal: 'Indian Journal of Pure and Applied Mathematics'
@@ -3321,6 +3361,18 @@
   mrnumber: '2845645'
   mrclass: '92D20'
   volume: '42'
+
+- number: '3'
+  author: 'Sain, Debmalya and Ray, Anubhab and Paul, Kallol'
+  fjournal: 'Journal of Convex Analysis'
+  pages: '877-885'
+  year: '2019'
+  title: 'Extreme contractions on finite-dimensional polygonal Banach spaces'
+  issn: '0944-6532'
+  journal: 'J. Convex Anal.'
+  mrnumber: '4014686'
+  mrclass: '46B20 (47L05)'
+  volume: '26'
 
 - number: '1'
   author: 'Paul, Prabal and Pradeep, C. R. and Rajan, B. Sundar'
@@ -5867,18 +5919,6 @@
   mrclass: '62M15 (62J15 62M10 92B15)'
   volume: '371'
 
-- number: 'Sp. Number 1'
-  author: 'Narasimhan, M. S.'
-  fjournal: 'Mathematics Newsletter'
-  pages: '227-230'
-  year: '2010'
-  title: 'Algebraic geometry in India'
-  issn: '0971-1694'
-  journal: 'Math. Newsl.'
-  mrnumber: '3012723'
-  mrclass: '01A32 (14-03)'
-  volume: '19'
-
 - number: '7'
   author: 'Banerjee, Abhishek'
   fjournal: 'International Journal of Mathematics'
@@ -6111,6 +6151,32 @@
   mrnumber: '3296015'
   mrclass: '11F50 (11F11 11F25)'
   volume: '149'
+
+- number: '5'
+  author: 'Banerjee, Abhishek and Kour, Surjeet'
+  fjournal: 'Annali di Matematica Pura ed Applicata. Series IV'
+  url: 'https://doi.org/10.1007/s10231-019-00844-x'
+  pages: '1781-1802'
+  year: '2019'
+  title: '$(A,\delta)$-modules, Hochschild homology and higher derivations'
+  doi: '10.1007/s10231-019-00844-x'
+  issn: '0373-3114'
+  journal: 'Ann. Mat. Pura Appl. (4)'
+  mrnumber: '4022119'
+  mrclass: '13N15 (16W25)'
+  volume: '198'
+
+- number: 'Sp. Number 1'
+  author: 'Narasimhan, M. S.'
+  fjournal: 'Mathematics Newsletter'
+  pages: '227-230'
+  year: '2010'
+  title: 'Algebraic geometry in India'
+  issn: '0971-1694'
+  journal: 'Math. Newsl.'
+  mrnumber: '3012723'
+  mrclass: '01A32 (14-03)'
+  volume: '19'
 
 - mrnumber: '2472961'
   pages: 'viii+392'
@@ -7635,6 +7701,20 @@
   mrnumber: '1290958'
   mrclass: '57Q15 (52B70)'
   volume: '104'
+
+- number: '4'
+  author: 'Banerjee, Abhishek'
+  fjournal: 'Canadian Mathematical Bulletin. Bulletin Canadien de Math&eacute;matiques'
+  url: 'https://doi.org/10.4153/s0008439518000656'
+  pages: '703-714'
+  year: '2019'
+  title: 'On differential torsion theories and rings with several objects'
+  doi: '10.4153/s0008439518000656'
+  issn: '0008-4395'
+  journal: 'Canad. Math. Bull.'
+  mrnumber: '4028481'
+  mrclass: '16D90 (18E05 18E40)'
+  volume: '62'
 
 - number: '10'
   author: 'Biswas, Indranil and Biswas, Jishnu and Ravindra, G. V.'
@@ -11092,6 +11172,20 @@
   mrclass: '80A20'
   volume: '42'
 
+- number: '12'
+  author: 'Gudi, Thirupathi and Majumder, Papri'
+  fjournal: 'Computers \& Mathematics with Applications. An International Journal'
+  url: 'https://doi.org/10.1016/j.camwa.2019.06.022'
+  pages: '3896-3915'
+  year: '2019'
+  title: 'Conforming and discontinuous Galerkin FEM in space for solving parabolic obstacle problem'
+  doi: '10.1016/j.camwa.2019.06.022'
+  issn: '0898-1221'
+  journal: 'Comput. Math. Appl.'
+  mrnumber: '4029105'
+  mrclass: '65M60'
+  volume: '78'
+
 - number: '4'
   author: 'Banerjee, Abhishek'
   fjournal: 'Journal of Noncommutative Geometry'
@@ -11667,19 +11761,6 @@
   mrclass: '91G20 (60H30 91B70)'
   volume: '30'
 
-- author: 'Gayen, R. and Gupta, Sourav and Chakrabarti, A.'
-  fjournal: 'Applied Mathematics Letters. An International Journal of Rapid Publication'
-  url: 'https://doi.org/10.1016/j.aml.2016.01.018'
-  pages: '19-25'
-  year: '2016'
-  title: 'Approximate solution of the problem of scattering of surface water waves by a partially immersed rigid plane vertical barrier'
-  doi: '10.1016/j.aml.2016.01.018'
-  issn: '0893-9659'
-  journal: 'Appl. Math. Lett.'
-  mrnumber: '3482990'
-  mrclass: '76B15 (45D05)'
-  volume: '58'
-
 - number: '4'
   author: 'Mandal, Mousumi and Verma, J. K.'
   fjournal: 'Journal of Commutative Algebra'
@@ -11825,6 +11906,33 @@
   mrnumber: '3974191'
   mrclass: '60J10 (00A08 05A05)'
   volume: '55'
+
+- number: '3'
+  author: 'Mal, Arpita and Paul, Kallol and Rao, T. S. S. R. K. and Sain, Debmalya'
+  fjournal: 'Monatshefte f&uuml;r Mathematik'
+  url: 'https://doi.org/10.1007/s00605-019-01289-3'
+  pages: '549-558'
+  year: '2019'
+  title: 'Approximate Birkhoff-James orthogonality and smoothness in the space of bounded linear operators'
+  doi: '10.1007/s00605-019-01289-3'
+  issn: '0026-9255'
+  journal: 'Monatsh. Math.'
+  mrnumber: '4018444'
+  mrclass: '46B28 (46B20 47L05)'
+  volume: '190'
+
+- author: 'Gayen, R. and Gupta, Sourav and Chakrabarti, A.'
+  fjournal: 'Applied Mathematics Letters. An International Journal of Rapid Publication'
+  url: 'https://doi.org/10.1016/j.aml.2016.01.018'
+  pages: '19-25'
+  year: '2016'
+  title: 'Approximate solution of the problem of scattering of surface water waves by a partially immersed rigid plane vertical barrier'
+  doi: '10.1016/j.aml.2016.01.018'
+  issn: '0893-9659'
+  journal: 'Appl. Math. Lett.'
+  mrnumber: '3482990'
+  mrclass: '76B15 (45D05)'
+  volume: '58'
 
 - number: '1'
   author: 'Anamby, Pramath and Das, Soumya'
