--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -90,6 +90,14 @@
   research-area: PDE, finite element method 
 
 
+- name	:	Ramesh Manna
+  phd: Harish-Chandra Research Institute, Prayagraj (Allahabad)
+  user-id	:	rameshmanna
+  position: UGC Kothari
+  image: true
+  research-area: Harmonic Analysis
+
+
 - name	:	Kaustubh Manchanda 
   phd: JNU
   user-id	:	kaustubhm
