--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -91,7 +91,7 @@
 
 
 - name	:	Ramesh Manna
-  phd: Harish-Chandra Research Institute, Prayagraj (Allahabad)
+  phd: HRI, Allahabad
   user-id	:	rameshmanna
   position: UGC Kothari
   image: true
