--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -104,6 +104,15 @@
     - Gudi, Thirupathi
     - Gudi, T.
 
+- name: Purvi Gupta 
+  user-id: purvigupta
+  position: Assistant Professor
+  research-areas: Several complex variables
+  phd: Michigan
+  phone-ext: 3214
+  office: R23
+  author-name: Gupta, Purvi
+ 
 - name: Subhojoy Gupta
   user-id: subhojoy
   position: Assistant Professor
