--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -26,5 +26,10 @@ jobs:
         java-version: 1.8
     - name: Test for broken links
       run: ./amm checklinks.sc
+    - name: save built pages
+      uses: actions/upload-artifact@v1
+      with: 
+        name: website
+        path: _site
 
 
