--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -19,7 +19,7 @@ jobs:
         gem install -v "2.0.1" bundler 
         bundle update github-pages 
         bundle install --without development test 
-        bundle exec jekyll build 
+        bundle exec jekyll build --config _config.yml,_config-root.yml
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
