venkat sir web page link update.

--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -272,6 +272,7 @@
   phd: IMSc
   phone-ext:
   office: X23
+  website: https://sites.google.com/view/rvenkateshiisc
   author-name: Venkatesh, R.
 
 - name:  Kaushal Verma
