bizarre year corrected

--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -4167,7 +4167,7 @@
 - author: 'Paul, Kallol and Sain, Debmalya and Ghosh, Puja'
   mrnumber: '3971960'
   pages: '331-344'
-  year: '[2019] \copyright 2019'
+  year: '2019'
   publisher: 'Springer, Cham'
   booktitle: 'Ulam type stability'
   title: 'Symmetry of Birkhoff-James orthogonality of bounded linear operators'
