another malformed year

--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -11072,7 +11072,7 @@
 - author: 'Viswanath, Sankaran'
   fjournal: 'S&eacute;minaire Lotharingien de Combinatoire'
   pages: 'Art. B58f, 20'
-  year: '2007/08'
+  year: '2007'
   mrreviewer: 'Jae-Hoon Kwon'
   title: 'Kostka-Foulkes polynomials for symmetrizable Kac-Moody algebras'
   issn: '1286-4889'
