--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -112,7 +112,7 @@ aug2020:
     ug-prereq-courses: UM 204
     venue: LH-4
   - name: Algebra I
-    instructor: Mahesh Kakde
+    instructor: Mahesh Kakde and Soumya Das
     timing: 
     code: MA 212
     prereq-courses: ''
