Riemann surface details

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -177,6 +177,7 @@ aug2020:
   - name: Riemann Surfaces 
     instructor: Subhojoy Gupta 
     code: MA 307
+    webpage: https://sites.google.com/view/subhojoy/ma307
   - name: Algebraic Geometry I 
     instructor: Radhika Ganapathy
     code: MA 310
