added missing paper

--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -12276,6 +12276,20 @@
   mrclass: '57M07 (20F65)'
   volume: '120'
 
+- author: 'Kor&aacute;nyi, Adam and Misra, Gadadhar'
+  fjournal: 'Advances in Mathematics'
+  url: 'https://doi.org/10.1016/j.aim.2019.05.018'
+  pages: '1105-1138'
+  year: '2019'
+  mrreviewer: 'Ze Hua Zhou'
+  title: 'Homogeneous Hermitian holomorphic vector bundles and the Cowen-Douglas class over bounded symmetric domains'
+  doi: '10.1016/j.aim.2019.05.018'
+  issn: '0001-8708'
+  journal: 'Adv. Math.'
+  mrnumber: '3957906'
+  mrclass: '47A13 (20C25 32M15 53C07)'
+  volume: '351'
+
 - mrnumber: '772390'
   pages: '1-11'
   year: '1982'
