PDF page update

--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -93,7 +93,7 @@
 - name	:	Ramesh Manna
   phd: HRI, Allahabad
   user-id	:	rameshmanna
-  position: UGC Kothari
+  position: IISc Raman PDF
   image: true
   research-area: Harmonic Analysis
 
