phd alumni updated

--- a/_data/phd-alumni.yaml
+++ b/_data/phd-alumni.yaml
@@ -1010,3 +1010,27 @@
   title: "Computation of Sparse Representations of High Dimensional Time Series Data and Experimental Applications"
   advisor: G. Rangarajan
 
+- name: Soumitra Ghara
+  year: 2019
+  title: Decomposition of the tensor product of Hilbert modles via the jet contruction and weakly homogeneous operators
+  advisor: Gadadhar Misra
+
+- name: Amar Deep Sarkar
+  year: 2019
+  title: A study of Some Conformal Metrics and Invariants on Planar Domains
+  advisor: Kaushal Verma
+
+- name: Somnath Pradhan
+  year: 2019
+  title: Risk-Sensitive Stochastic Control and Differeential Games
+  advisor: Mrinal Kanti Ghosh
+
+- name: Anwoy Maitra
+  year: 2019
+  title: On the Kobayashi geometry of domains
+  advisor: Gautam Bharali
+
+- name: Pramath A V
+  year: 2019
+  title: Fourier coefficients of modular forms and mass of pullback of Saito-Kurokawa lifts
+  advisor: Soumya Das
